# Legally-Distinct-Cardgame

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
main/: game.c  gameTypes.h
main/definitions/: gameRules.h  gameTypes.h
main/functions/: cardHandlers.h  createDeck.h  shuffleDeck.h
